update button cover

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <h1 class="mt-3 mb-3" data-aos="fade-up">Arin &amp; Indra</h1>
                 <p class="pt-3 mb-0" data-aos="fade-up">Kepada Yth, Bapak / Ibu / Saudara / i</p>
                 <p class="pt-3 mb-4" data-aos="fade-up">Nama Undangan</p>
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="open" data-aos="fade-up">Buka Undangan</button>
+                <a type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="open" data-aos="fade-up">Buka Undangan</a>
               </div>
             </div>
           </div>
