--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <!-- HERO -->
     <section id="hero" class="bg-paper min-vh-100">
       <div class="position-relative">
-        <img src="assets/img/flower-3.png" class="hero-divider position-absolute"/>
+        <img src="assets/img/flower-3-min.png" class="hero-divider position-absolute"/>
       </div>
       <div class="hero align-self-center text-center col-md-8 offset-md-2">
         <div class="hero-text">
@@ -85,7 +85,7 @@
     <!-- ABOUT -->
     <section id="about" class="py-5">
       <div class="position-relative">
-        <img src="assets/img/flower-3.png" class="about-divider position-absolute my-3"/>
+        <img src="assets/img/flower-3-min.png" class="about-divider position-absolute my-3"/>
       </div>
       <div class="text-center mt-3">
         <div class="about-image mx-auto mb-3" data-aos="fade-up"></div>
@@ -107,7 +107,7 @@
     <!-- EVENT -->
     <section id="event" class="event bg-paper text-center vh-100">
       <div class="position-relative">
-        <img src="assets/img/flower-4.png" class="event-divider-1 position-absolute my-3" data-aos="fade-up"/>
+        <img src="assets/img/flower-4-min.png" class="event-divider-1 position-absolute my-3" data-aos="fade-up"/>
       </div>
       <div class="row align-items-center py-3 py-sm-5 my-auto min-vh-100 mx-4">
         <div class="col-12">
