--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     </section>
 
     <!-- GALLERY -->
-    <section id="gallery" class="gallery">
+    <!-- <section id="gallery" class="gallery">
       <div class="container" data-aos="fade-up">
 
         <div class="text-center pt-5 pb-5">
@@ -177,7 +177,7 @@
         </div>
 
       </div>
-    </section>
+    </section> -->
 
     <!-- PARALLAX -->
     <section id="parallax" class="parallax">
