--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <div class="cover-text">
                 <h1 class="mt-3 mb-3" data-aos="fade-up">Arin &amp; Indra</h1>
                 <p class="pt-3 mb-0" data-aos="fade-up">Kepada Yth, Bapak / Ibu / Saudara / i</p>
-                <p id="name" class="pt-3 mb-4" data-aos="fade-up"></p>
+                <p id="name" class="pt-3 mb-4" data-aos="fade-up">Nama Tamu</p>
                 <a type="button" class="btn btn-secondary" data-bs-dismiss="modal" data-dismiss="modal" id="open" data-aos="fade-up">Buka Undangan</a>
               </div>
             </div>
@@ -314,12 +314,6 @@
         width: "100vw",
         height: "100vh" 
       });
-    </script>
-    <script>
-      var value = window.location.search;
-      var urlParams = new URLSearchParams(value);
-      var name = urlParams.get('name');
-      document.getElementById("name").innerHTML = name;
     </script>
   </body>
 </html>
