--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     </section>
 
     <!-- GALLERY -->
-    <!-- <section id="gallery" class="gallery">
+    <section id="gallery" class="gallery">
       <div class="container" data-aos="fade-up">
 
         <div class="text-center pt-5 pb-5">
@@ -176,7 +176,7 @@
         </div>
 
       </div>
-    </section> -->
+    </section>
 
     <!-- PARALLAX -->
     <section id="parallax" class="parallax">
