--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <!-- PAGE LOADER -->
-    <div class="overlay">
+    <div id="loading" class="overlay">
       <div class="overlayDoor"></div>
       <div class="overlayContent">
         <div class="loader">
