--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <link rel="icon" href="assets/img/favicon.ico" />
     <title>Arin & Indra</title>
     <!-- Font -->
-    <link rel="stylesheet" href="assets/font/Nunito_Sans/stylesheet.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700&display=swap" rel="stylesheet">
+
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Niconne&display=swap" rel="stylesheet" />
