--- a/index.html
+++ b/index.html
@@ -2,11 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Cache control -->
-    <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, proxy-revalidate">
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="Expires" content="0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
     <!-- Icon -->
     <link rel="icon" href="assets/img/favicon.ico" />
     <title>Arin & Indra</title>
@@ -45,7 +42,7 @@
     <div class="modal fade" id="cover" data-bs-backdrop="static" data-bs-keyboard="false" aria-hidden="true">
       <div class="modal-dialog modal-fullscreen">
         <div class="modal-content">
-          <div id="cover" class="cover modal-body d-flex min-vh-100" style="background: url(assets/img/hero-img.jpg) center / cover no-repeat; background-color: #383838; background-blend-mode: overlay; background-attachment: fixed">
+          <div id="cover" class="cover modal-body d-flex min-vh-100" >
             <div class="align-self-center text-center col-md-8 offset-md-2">
               <div class="cover-text">
                 <h1 class="mt-3 mb-3" data-aos="fade-up">Arin &amp; Indra</h1>
