--- a/index.html
+++ b/index.html
@@ -76,22 +76,6 @@
         </div>
       </div>
     </div>
-    <!-- <div class="modal fade" id="cover" data-bs-backdrop="static" data-bs-keyboard="false" aria-hidden="true">
-      <div class="modal-dialog modal-fullscreen">
-        <div class="modal-content">
-          <div class="cover modal-body d-flex min-vh-100" style="background: url(assets/img/hero-img.jpg) center / cover no-repeat; background-color: #383838; background-blend-mode: overlay; background-attachment: fixed">
-            <div class="align-self-center text-center col-md-8 offset-md-2">
-              <div class="cover-text">
-                <h1 class="mt-3 mb-3" data-aos="fade-up">Arin &amp; Indra</h1>
-                <p class="pt-3 mb-0" data-aos="fade-up">Kepada Yth, Bapak / Ibu / Saudara / i</p>
-                <p id="name" class="pt-3 mb-4" data-aos="fade-up">Nama Tamu</p>
-                <a type="button" class="btn btn-secondary" data-bs-dismiss="modal" data-dismiss="modal" id="open" data-aos="fade-up">Buka Undangan</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
 
     <!-- MUSIC -->
     <div id="music">
@@ -162,7 +146,7 @@
                   <i class="bi bi-geo-alt"></i>&nbsp;Gedung Auditorium BPSDM Hukum dan HAM<br />
                   Jl. Raya Gandul No.4, Cinere <br />Kota Depok
                 </p>
-                <a href="https://goo.gl/maps/4jrwTNQBpU7Pq7hMA" class="btn btn-outline-secondary my-3" target="_blank" data-aos="fade-up">View Maps</a>
+                <a href="https://maps.app.goo.gl/Bb7B4WQRPREBPaNK9?g_st=ic" class="btn btn-outline-secondary my-3" target="_blank" data-aos="fade-up">View Maps</a>
               </div>
             </div>
           </div>
@@ -220,9 +204,6 @@
       </div>
     </section>
 
-    <!-- PARALLAX -->
-    <section id="parallax" class="parallax">
-    </section>
     <!-- WISHES -->
     <section id="wishes" class="wishes">
       <div class="container mt-5 mb-5">
@@ -322,12 +303,8 @@
         <p>DESIGNED BY</p>
         <img src="assets/img/logo-diginvee.png" class="credits mb-2">
         <ul class="list-inline mb-3">
-            <li class="list-inline-item">
-                <a class="social-link rounded-circle text-white mr-3" href="https://www.instagram.com/diginvee/" target="_blank"><i class="bi bi-instagram"></i></a>
-            </li>
-            <li class="list-inline-item">
-                <a class="social-link rounded-circle text-white mr-3" href="#!"><i class="bi bi-whatsapp"></i></a>
-            </li>
+          <a class="text-white mx-3" href="https://www.instagram.com/diginvee/" target="_blank"><i class="bi bi-instagram"></i></a>
+          <a class="text-white mx-3" href="#!"><i class="bi bi-whatsapp"></i></a>
         </ul>
       </div>
       
