update cover, hero

--- a/index.html
+++ b/index.html
@@ -50,19 +50,20 @@
               <div class="info d-flex align-items-center">
                 <div class="container">
                   <div class="row justify-content-center">
-                    <div class="col-lg-6 cover-text">
-                      <h1 class="mt-3 mb-3" data-aos="fade-up">Arin &amp; Indra</h1>
-                      <p class="pt-3 mb-0" data-aos="fade-up">Kepada Yth, Bapak / Ibu / Saudara / i</p>
-                      <p id="name" class="pt-3 mb-4" data-aos="fade-up">Nama Tamu</p>
-                        <a type="button" class="btn btn-secondary" data-bs-dismiss="modal" data-dismiss="modal" id="open" data-aos="fade-up">Buka Undangan</a>
+                    <div class="col-auto cover-text">
+                      <h1 data-aos="fade-up">Arin &amp; Indra</h1>
+                      <p class="py-1" data-aos="fade-up">Kepada Yth, Nama Tamu</p>
+                      <div class="col-auto text-center pt-5">
+                        <a type="button" class="btn btn-open" data-bs-dismiss="modal" data-dismiss="modal" id="open" data-aos="fade-up"><i class="bi bi-envelope-open-heart"></i>&nbsp; Buka Undangan</a>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
           
-              <div id="hero-carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
+              <div id="hero-carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
           
-                <div class="carousel-item active" style="background-image: url(assets/img/hero-img.jpg)">
+                <div class="carousel-item active" style="background-image: url(assets/img/gallery-pic-0.jpg)">
                 </div>
                 <div class="carousel-item" style="background-image: url(assets/img/gallery-pic-1.jpg)"></div>
                 <div class="carousel-item" style="background-image: url(assets/img/gallery-pic-2.jpg)"></div>
@@ -92,10 +93,11 @@
       </div>
       <div class="hero align-self-center text-center col-md-8 offset-md-2">
         <div class="hero-text">
-          <p data-aos="fade-up" data-aos="fade-up">The Wedding Ceremony of</p>
-          <h1 class="mt-3 mb-3" data-aos="fade-up">Arin &amp; Indra</h1>
-          <p class="pt-3 mb-0" data-aos="fade-up">Save The Date</p>
-          <div id="countdown" data-aos="fade-up">
+          <p >The Wedding Ceremony of</p>
+          <h1 class="mt-3 mb-3" >Arin &amp; Indra</h1>
+          <div class="about-image mx-auto mb-3" ></div>
+          <p class="pt-3 mb-0" >⇝ Sabtu, 01 Juli 2023 ⇜</p>
+          <div id="countdown" >
             <ul class="p-0">
               <li class="text-center"><span id="days" class="align-items-center"></span>Hari</li>
               <li class="text-center"><span id="hours" class="align-items-center"></span>Jam</li>
@@ -113,17 +115,23 @@
         <img src="assets/img/flower-3-min.png" class="about-divider position-absolute my-3"/>
       </div>
       <div class="text-center mt-3">
-        <div class="about-image mx-auto mb-3" data-aos="fade-up"></div>
+        <!-- <div class="about-image mx-auto mb-3" data-aos="fade-up"></div> -->
         <h2 data-aos="fade-up">Aswarin Prastiani, SKM.</h2>
-        <p class="about-parents mx-auto" data-aos="fade-up">
-          Putri pertama dari : <br />Drs. Budi Priyatmono, MH <br />&<br />
+        <p class="about-parents mx-auto mb-1" data-aos="fade-up">
+          Putri pertama dari : 
+        </p>
+        <p class="about-parents mx-auto"  data-aos="fade-up">
+          Drs. Budi Priyatmono, MH <br />&<br />
           Astianingsih
         </p>
         <h1 data-aos="fade-up">&amp;</h1>
-        <div class="about-image mx-auto mb-3" data-aos="fade-up"></div>
+        <!-- <div class="about-image mx-auto mb-3" data-aos="fade-up"></div> -->
         <h2 data-aos="fade-up">dr. Indra Putra Prakasa</h2>
-        <p class="about-parents mx-auto" data-aos="fade-up">
-          Putra pertama dari : <br />Drs. Bardono <br />&<br />
+        <p class="about-parents mx-auto mb-1" data-aos="fade-up">
+          Putra pertama dari : 
+        </p>
+        <p class="about-parents mx-auto"  data-aos="fade-up">
+          Drs. Bardono <br />&<br />
           Ely Rahmawati
         </p>
       </div>
@@ -176,28 +184,28 @@
         </div>
 
         <div class="row gy-3 pb-5">
-          <div class="col-lg-4 gallery-item" data-aos="fade-up">
-            <a href="assets/img/gallery-pic-1.jpg" class="glightbox"><img src="assets/img/gallery-pic-1.jpg" class="gallery-img img-fluid" alt=""></a>  
+          <div class="col-lg-4 col-6 gallery-item" data-aos="fade-up">
+            <a href="assets/img/gallery-pic-1.jpg" class="glightbox"><img src="assets/img/gallery-pic-1.jpg" class="gallery-img img-fluid rounded-3" alt=""></a>  
           </div>
 
-          <div class="col-lg-4 gallery-item" data-aos="fade-up">
-            <a href="assets/img/gallery-pic-2.jpg" class="glightbox"><img src="assets/img/gallery-pic-2.jpg" class="gallery-img img-fluid" alt=""></a>
+          <div class="col-lg-4 col-6 gallery-item" data-aos="fade-up">
+            <a href="assets/img/gallery-pic-2.jpg" class="glightbox"><img src="assets/img/gallery-pic-2.jpg" class="gallery-img img-fluid rounded-3" alt=""></a>
           </div>
 
-          <div class="col-lg-4 gallery-item" data-aos="fade-up">
-            <a href="assets/img/gallery-pic-3.jpg" class="glightbox"><img src="assets/img/gallery-pic-3.jpg" class="gallery-img img-fluid" alt=""></a>  
+          <div class="col-lg-4 col-6 gallery-item" data-aos="fade-up">
+            <a href="assets/img/gallery-pic-3.jpg" class="glightbox"><img src="assets/img/gallery-pic-3.jpg" class="gallery-img img-fluid rounded-3" alt=""></a>  
           </div>
 
-          <div class="col-lg-4 gallery-item" data-aos="fade-up">
-            <a href="assets/img/gallery-pic-4.jpg" class="glightbox"><img src="assets/img/gallery-pic-4.jpg" class="gallery-img img-fluid" alt=""></a>  
+          <div class="col-lg-4 col-6 gallery-item" data-aos="fade-up">
+            <a href="assets/img/gallery-pic-4.jpg" class="glightbox"><img src="assets/img/gallery-pic-4.jpg" class="gallery-img img-fluid rounded-3" alt=""></a>  
           </div>
 
-          <div class="col-lg-4 gallery-item" data-aos="fade-up">
-            <a href="assets/img/gallery-pic-5.jpg" class="glightbox"><img src="assets/img/gallery-pic-5.jpg" class="gallery-img img-fluid" alt=""></a>  
+          <div class="col-lg-4 col-6 gallery-item" data-aos="fade-up">
+            <a href="assets/img/gallery-pic-5.jpg" class="glightbox"><img src="assets/img/gallery-pic-5.jpg" class="gallery-img img-fluid rounded-3" alt=""></a>  
           </div>
 
-          <div class="col-lg-4 gallery-item" data-aos="fade-up">
-            <a href="assets/img/gallery-pic-6.jpg" class="glightbox"><img src="assets/img/gallery-pic-6.jpg" class="gallery-img img-fluid" alt=""></a>      
+          <div class="col-lg-4 col-6 gallery-item" data-aos="fade-up">
+            <a href="assets/img/gallery-pic-6.jpg" class="glightbox"><img src="assets/img/gallery-pic-6.jpg" class="gallery-img img-fluid rounded-3" alt=""></a>      
           </div>
         </div>
 
