--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
     </section>
 
     <!-- EVENT -->
-    <section id="event" class="event bg-paper text-center vh-100">
+    <section id="event" class="event bg-paper text-center">
       <div class="position-relative">
         <img src="assets/img/flower-4-min.png" class="event-divider-1 position-absolute my-3" data-aos="fade-up"/>
       </div>
-      <div class="row align-items-center py-3 py-sm-5 my-auto min-vh-100 mx-4">
+      <div class="row align-items-center py-3 py-sm-5 my-auto mx-4">
         <div class="col-12">
           <div class="card event-card border-2 border-light-subtle mx-auto" data-aos="fade-up">
             <div class="card-body text-center row align-items-center">
@@ -155,19 +155,6 @@
                   Jl. Raya Gandul No.4, Cinere <br />Kota Depok
                 </p>
                 <a href="https://maps.app.goo.gl/Bb7B4WQRPREBPaNK9?g_st=ic" class="btn btn-outline-secondary my-3" target="_blank" data-aos="fade-up">View Maps</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-12">
-          <div class="card event-card border-2 border-light-subtle mx-auto" data-aos="fade-up">
-            <div class="card-body row align-items-center">
-              <div class="mx-md-auto">
-                <p class="about-verse mx-auto" data-aos="fade-up">
-                  “Dan di antara tanda-tanda kekuasaan-Nya ialah Dia menciptakan untukmu pasangan-pasangan dari jenismu sendiri, supaya kamu cenderung dan merasa tenteram kepadanya, dan dijadikan-Nya diantaramu rasa kasih dan sayang.
-                  Sesungguhnya pada yang demikian itu benar-benar terdapat tanda-tanda bagi kaum yang berfikir.”
-                </p>
-                <p class="about-surah mx-auto mb-0" data-aos="fade-up">(QS. Ar-Rum Ayat 21)</p>
               </div>
             </div>
           </div>
@@ -211,6 +198,28 @@
 
       </div>
     </section>
+
+        <!-- EVENT -->
+        <section id="event" class="event bg-paper text-center">
+          <div class="position-relative">
+            <img src="assets/img/flower-4-min.png" class="event-divider-1 position-absolute my-3" data-aos="fade-up"/>
+          </div>
+          <div class="row align-items-center py-3 py-sm-5 my-auto mx-4">
+            <div class="col-12">
+              <div class="card event-card border-2 border-light-subtle mx-auto" data-aos="fade-up">
+                <div class="card-body row align-items-center">
+                  <div class="mx-md-auto">
+                    <p class="about-verse mx-auto" data-aos="fade-up">
+                      “Dan di antara tanda-tanda kekuasaan-Nya ialah Dia menciptakan untukmu pasangan-pasangan dari jenismu sendiri, supaya kamu cenderung dan merasa tenteram kepadanya, dan dijadikan-Nya diantaramu rasa kasih dan sayang.
+                      Sesungguhnya pada yang demikian itu benar-benar terdapat tanda-tanda bagi kaum yang berfikir.”
+                    </p>
+                    <p class="about-surah mx-auto mb-0" data-aos="fade-up">(QS. Ar-Rum Ayat 21)</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
 
     <!-- WISHES -->
     <section id="wishes" class="wishes">
