gallery animation update

--- a/index.html
+++ b/index.html
@@ -171,27 +171,27 @@
         </div>
 
         <div class="row gy-3 pb-5">
-          <div class="col-lg-4 col-6 gallery-item" data-aos="fade-up">
+          <div class="col-lg-4 col-6 gallery-item" data-aos="zoom-in-up" data-aos-delay="200">
             <a href="assets/img/gallery-pic-1.jpg" class="glightbox"><img src="assets/img/gallery-pic-1.jpg" class="gallery-img img-fluid rounded-3" alt=""></a>  
           </div>
 
-          <div class="col-lg-4 col-6 gallery-item" data-aos="fade-up">
+          <div class="col-lg-4 col-6 gallery-item" data-aos="zoom-in-up" data-aos-delay="400">
             <a href="assets/img/gallery-pic-2.jpg" class="glightbox"><img src="assets/img/gallery-pic-2.jpg" class="gallery-img img-fluid rounded-3" alt=""></a>
           </div>
 
-          <div class="col-lg-4 col-6 gallery-item" data-aos="fade-up">
+          <div class="col-lg-4 col-6 gallery-item" data-aos="zoom-in-up" data-aos-delay="400">
             <a href="assets/img/gallery-pic-3.jpg" class="glightbox"><img src="assets/img/gallery-pic-3.jpg" class="gallery-img img-fluid rounded-3" alt=""></a>  
           </div>
 
-          <div class="col-lg-4 col-6 gallery-item" data-aos="fade-up">
+          <div class="col-lg-4 col-6 gallery-item" data-aos="zoom-in-up" data-aos-delay="200">
             <a href="assets/img/gallery-pic-4.jpg" class="glightbox"><img src="assets/img/gallery-pic-4.jpg" class="gallery-img img-fluid rounded-3" alt=""></a>  
           </div>
 
-          <div class="col-lg-4 col-6 gallery-item" data-aos="fade-up">
+          <div class="col-lg-4 col-6 gallery-item" data-aos="zoom-in-up" data-aos-delay="200">
             <a href="assets/img/gallery-pic-5.jpg" class="glightbox"><img src="assets/img/gallery-pic-5.jpg" class="gallery-img img-fluid rounded-3" alt=""></a>  
           </div>
 
-          <div class="col-lg-4 col-6 gallery-item" data-aos="fade-up">
+          <div class="col-lg-4 col-6 gallery-item" data-aos="zoom-in-up" data-aos-delay="400">
             <a href="assets/img/gallery-pic-6.jpg" class="glightbox"><img src="assets/img/gallery-pic-6.jpg" class="gallery-img img-fluid rounded-3" alt=""></a>      
           </div>
         </div>
