--- a/index.html
+++ b/index.html
@@ -230,11 +230,17 @@
             <p class="text-wishes" data-aos="fade-up">Kirimkan Doa & Ucapan Untuk Kami</p>
           </div>
           <div class="col-12 col-md-8">
-            <div class="form-floating" data-aos="fade-up">
+            <input type="text" class="form-control mb-3" value="Nama Tamu" data-aos="fade-up" style="color: #888d73;" disabled>
+            <div class="form-floating mb-3" data-aos="fade-up">
               <textarea class="form-control" placeholder="Doa dan Ucapan" id="wishes-form" style="height: 100px"></textarea>
               <label for="wishes-form">Doa dan Ucapan</label>
             </div>
-            <div class="mt-3 d-grid text-center" data-aos="fade-up">
+            <select class="form-select" data-aos="fade-up" style="color: #888d73;">
+              <option selected disabled>Konfirmasi Kehadiran</option>
+              <option value="Hadir">Hadir</option>
+              <option value="Tidak Hadir">Tidak Hadir</option>
+            </select>
+            <div class="mt-4 d-grid text-center" data-aos="fade-up">
               <button class="btn btn-outline-secondary">Kirim</button>
             </div>
           </div>
@@ -248,7 +254,10 @@
                     </div>
                   </div>
                   <p class="text-justify comment-text my-2" data-aos="fade-up">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-                  <small data-aos="fade-up">18 June 2023, 12:00:43</small>
+                  <div class="row">
+                    <small class="col-6" data-aos="fade-up">18 June 2023, 12:00:43</small>
+                    <a class="col-6 text-end btn-reply" href="#" data-aos="fade-up"><i class="bi bi-reply"></i>&nbsp;Reply</a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -261,7 +270,10 @@
                     </div>
                   </div>
                   <p class="text-justify comment-text my-2" data-aos="fade-up">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-                  <small data-aos="fade-up">18 June 2023, 12:00:43</small>
+                  <div class="row">
+                    <small class="col-6" data-aos="fade-up">18 June 2023, 12:00:43</small>
+                    <a class="col-6 text-end btn-reply" href="#" data-aos="fade-up"><i class="bi bi-reply"></i>&nbsp;Reply</a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -274,7 +286,10 @@
                     </div>
                   </div>
                   <p class="text-justify comment-text my-2" data-aos="fade-up">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-                  <small data-aos="fade-up">18 June 2023, 12:00:43</small>
+                  <div class="row">
+                    <small class="col-6" data-aos="fade-up">18 June 2023, 12:00:43</small>
+                    <a class="col-6 text-end btn-reply" href="#" data-aos="fade-up"><i class="bi bi-reply"></i>&nbsp;Reply</a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -321,7 +336,7 @@
         <img src="assets/img/logo-diginvee.png" class="credits mb-2">
         <ul class="list-inline mb-3">
           <a class="text-white mx-3" href="https://www.instagram.com/diginvee/" target="_blank"><i class="bi bi-instagram"></i></a>
-          <a class="text-white mx-3" href="#!"><i class="bi bi-whatsapp"></i></a>
+          <a class="text-white mx-3" href="https://api.whatsapp.com/send/?phone=6285780131516" target="_blank"><i class="bi bi-whatsapp"></i></a>
         </ul>
       </div>
       
