data-aos update

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
               <div class="container">
                 <div class="row justify-content-center">
                   <div class="col-auto cover-text">
-                    <h1 data-aos="fade-up">Arin &amp; Indra</h1>
-                    <p class="py-1" data-aos="fade-up">Kepada Yth, Nama Tamu</p>
+                    <h1>Arin &amp; Indra</h1>
+                    <p class="py-1">Kepada Yth, Nama Tamu</p>
                     <div class="col-auto text-center pt-5">
-                      <a type="button" class="btn btn-open" data-bs-dismiss="modal" data-dismiss="modal" id="open" data-aos="fade-up"><i class="bi bi-envelope-open-heart"></i>&nbsp; Buka Undangan</a>
+                      <a type="button" class="btn btn-open" data-bs-dismiss="modal" data-dismiss="modal" id="open"><i class="bi bi-envelope-open-heart"></i>&nbsp; Buka Undangan</a>
                     </div>
                   </div>
                 </div>
@@ -80,21 +80,21 @@
 
     <!-- HERO -->
     <section id="hero" class="bg-paper min-vh-100">
-      <div class="position-relative">
+      <div class="position-relative" data-aos="fade-down" data-aos-delay="400" id="first-line">
         <img src="assets/img/flower-3-min.png" class="hero-divider position-absolute" />
       </div>
       <div class="hero align-self-center text-center col-md-8 offset-md-2">
         <div class="hero-text">
-          <p>The Wedding Ceremony of</p>
-          <h1 class="mt-3 mb-3">Arin &amp; Indra</h1>
-          <div class="about-image mx-auto mb-3"></div>
-          <p class="pt-3 mb-0">⇝ Sabtu, 01 Juli 2023 ⇜</p>
+          <p data-aos="fade-down">The Wedding Ceremony of</p>
+          <h1 class="mt-3 mb-3" data-aos="zoom-in-down" data-aos-anchor="#first-line">Arin &amp; Indra</h1>
+          <div class="about-image mx-auto mb-3" data-aos="zoom-in" data-aos-delay="400" data-aos-anchor="#first-line"></div>
+          <p class="pt-3 mb-0" data-aos="zoom-in-up" data-aos-anchor="#first-line">⇝ Sabtu, 01 Juli 2023 ⇜</p>
           <div id="countdown">
             <ul class="p-0">
-              <li class="text-center"><span id="days" class="align-items-center"></span>Hari</li>
-              <li class="text-center"><span id="hours" class="align-items-center"></span>Jam</li>
-              <li class="text-center"><span id="minutes" class="align-items-center"></span>Menit</li>
-              <li class="text-center"><span id="seconds" class="align-items-center"></span>Detik</li>
+              <li class="text-center" data-aos="fade-up" data-aos-delay="100" data-aos-anchor="#first-line"><span id="days" class="align-items-center"></span>Hari</li>
+              <li class="text-center" data-aos="fade-up" data-aos-delay="300" data-aos-anchor="#first-line"><span id="hours" class="align-items-center"></span>Jam</li>
+              <li class="text-center" data-aos="fade-up" data-aos-delay="500" data-aos-anchor="#first-line"><span id="minutes" class="align-items-center"></span>Menit</li>
+              <li class="text-center" data-aos="fade-up" data-aos-delay="700" data-aos-anchor="#first-line"><span id="seconds" class="align-items-center"></span>Detik</li>
             </ul>
           </div>
         </div>
@@ -103,7 +103,7 @@
 
     <!-- ABOUT -->
     <section id="about" class="py-5">
-      <div class="position-relative">
+      <div class="position-relative" data-aos="fade-up" data-aos-delay="400" data-aos-anchor="#first-line">
         <img src="assets/img/flower-3-min.png" class="about-divider position-absolute my-3" />
       </div>
       <div class="text-center mt-3">
@@ -251,13 +251,13 @@
                   <div>
                     <div>
                       <div>
-                        <input hidden id="giftNumber" type="text" value="1602 3323 8300 1010" />
+                        <input hidden id="giftNumber" type="text" value="0813-2830-7474" />
                         <p class="creditcard-number mb-1">
-                          1602 3323 8300 1010&nbsp;&nbsp;
+                          0813-2830-7474&nbsp;&nbsp;
                           <a type="button" id="copyNumber" onclick="copy()" class="copy-number"><i class="bi bi-files"></i></a>
                         </p>
                       </div>
-                      <p class="creditcard-text mb-1">Elena Calvillo</p>
+                      <p class="creditcard-text mb-1">Indra Putra Prakasa</p>
                     </div>
                   </div>
                 </div>
