--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
       </div>
       <div class="hero align-self-center text-center col-md-8 offset-md-2">
         <div class="hero-text">
-          <p data-aos="fade-down">The Wedding Ceremony of</p>
-          <h1 class="mt-3 mb-3" data-aos="zoom-in-down" data-aos-anchor="#first-line">Arin &amp; Indra</h1>
-          <div class="about-image mx-auto mb-3" data-aos="zoom-in" data-aos-delay="400" data-aos-anchor="#first-line"></div>
-          <p class="pt-3 mb-0" data-aos="zoom-in-up" data-aos-anchor="#first-line">⇝ Sabtu, 01 Juli 2023 ⇜</p>
+          <p data-aos="fade-down" class="mb-1">The Wedding of</p>
+          <h1 class="my-2" data-aos="zoom-in-down" data-aos-anchor="#first-line">Arin &amp; Indra</h1>
+          <div class="about-image mx-auto" data-aos="zoom-in" data-aos-delay="400" data-aos-anchor="#first-line"></div>
+          <p class="pt-2 mb-0" data-aos="zoom-in-up" data-aos-anchor="#first-line">⇝ Sabtu, 01 Juli 2023 ⇜</p>
           <div id="countdown">
             <ul class="p-0">
               <li class="text-center" data-aos="fade-up" data-aos-delay="100" data-aos-anchor="#first-line"><span id="days" class="align-items-center"></span>Hari</li>
