--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
       </div>
       <div class="hero align-self-center text-center col-md-8 offset-md-2">
         <div class="hero-text">
-          <p data-aos="fade-down" class="mb-1">The Wedding of</p>
+          <p data-aos="fade-down" class="mb-1">Undangan Resepsi Pernikahan</p>
           <h1 class="my-2" data-aos="zoom-in-down" data-aos-anchor="#first-line">Arin &amp; Indra</h1>
           <div class="about-image mx-auto" data-aos="zoom-in" data-aos-delay="400" data-aos-anchor="#first-line"></div>
-          <p class="pt-2 mb-0" data-aos="zoom-in-up" data-aos-anchor="#first-line">⇝ Sabtu, 01 Juli 2023 ⇜</p>
+          <p class="pt-2 mb-0" data-aos="zoom-in-up" data-aos-anchor="#first-line">⇝ Sabtu, 1 Juli 2023 ⇜</p>
           <div id="countdown">
             <ul class="p-0">
               <li class="text-center" data-aos="fade-up" data-aos-delay="100" data-aos-anchor="#first-line"><span id="days" class="align-items-center"></span>Hari</li>
@@ -108,7 +108,7 @@
       </div>
       <div class="text-center mt-3">
         <!-- <div class="about-image mx-auto mb-3" data-aos="fade-up"></div> -->
-        <h2 data-aos="fade-up">Aswarin Prastiani, SKM.</h2>
+        <h2 data-aos="fade-up">Aswarin Prastiani, SKM</h2>
         <p class="about-parents mx-auto mb-1" data-aos="fade-up">Putri pertama dari :</p>
         <p class="about-parents mx-auto" data-aos="fade-up">
           Drs. Budi Priyatmono, MH <br />&<br />
@@ -136,13 +136,13 @@
             <div class="card-body text-center row align-items-center">
               <div class="mx-auto">
                 <h2 class="mb-3" data-aos="fade-up">Resepsi Pernikahan</h2>
-                <p class="card-date my-3" data-aos="fade-up">⇝ Sabtu, 01 Juli 2023 ⇜</p>
-                <p class="card-text my-2" data-aos="fade-up"><i class="bi bi-clock"></i>&nbsp;11:00 - 13:00</p>
+                <p class="card-date my-3" data-aos="fade-up">⇝ Sabtu, 1 Juli 2023 ⇜</p>
+                <p class="card-text my-2" data-aos="fade-up"><i class="bi bi-clock"></i>&nbsp;11.00 — 13.00</p>
                 <p class="card-text my-2" data-aos="fade-up">
                   <i class="bi bi-geo-alt"></i>&nbsp;Gedung Auditorium BPSDM Hukum dan HAM<br />
-                  Jl. Raya Gandul No.4, Cinere <br />Kota Depok
+                  Jl. Raya Gandul No. 4, Cinere <br />Kota Depok
                 </p>
-                <a href="https://maps.app.goo.gl/Bb7B4WQRPREBPaNK9?g_st=ic" class="btn btn-outline-secondary my-3" target="_blank" data-aos="fade-up">View Maps</a>
+                <a href="https://maps.app.goo.gl/Bb7B4WQRPREBPaNK9?g_st=ic" class="btn btn-outline-secondary my-3" target="_blank" data-aos="fade-up">Buka Maps</a>
               </div>
             </div>
           </div>
@@ -154,7 +154,7 @@
     <section id="gallery" class="gallery">
       <div class="container" data-aos="fade-up">
         <div class="text-center pt-5 pb-5">
-          <h2 data-aos="fade-up">Photo Gallery</h2>
+          <h2 data-aos="fade-up">Galeri</h2>
         </div>
 
         <div class="row gy-3 pb-5">
@@ -231,7 +231,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="text-center">
-                <h2 data-aos="fade-up">Wedding Gift</h2>
+                <h2 data-aos="fade-up">Hadiah Pernikahan</h2>
                 <p class="text-gift" data-aos="fade-up">Silahkan kirim hadiah melalui nomor rekening maupun dompet digital berikut :</p>
               </div>
               <div class="creditcard">
@@ -291,7 +291,7 @@
                 </div>
               </div>
               <div id="copied-success" class="copied">
-                <span>Copied!</span>
+                <span>Tersalin!</span>
               </div>
             </div>
           </div>
