--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                   <i class="bi bi-geo-alt"></i>&nbsp;Gedung Auditorium BPSDM Hukum dan HAM<br />
                   Jl. Raya Gandul No. 4, Cinere <br />Kota Depok
                 </p>
-                <a href="https://maps.app.goo.gl/Bb7B4WQRPREBPaNK9?g_st=ic" class="btn btn-outline-secondary my-3" target="_blank" data-aos="fade-up">Buka Maps</a>
+                <a href="https://maps.app.goo.gl/Bb7B4WQRPREBPaNK9?g_st=ic" class="btn btn-outline-secondary my-3" target="_blank" data-aos="fade-up"><i class="bi bi-map"></i>&nbsp; Buka Maps</a>
               </div>
             </div>
           </div>
@@ -319,7 +319,7 @@
               <option value="Tidak Hadir">Tidak Hadir</option>
             </select>
             <div class="mt-4 d-grid text-center" data-aos="fade-up">
-              <button class="btn btn-outline-secondary">Kirim</button>
+              <button class="btn btn-outline-secondary"><i class="bi bi-send"></i>&nbsp; Kirim</button>
             </div>
           </div>
           <div class="col-md-8 mt-5">
